Updated script to be mostly functional

--- a/python/tagit-kivy/tagit.kv
+++ b/python/tagit-kivy/tagit.kv
@@ -273,6 +273,7 @@
     orientation: 'vertical'
     FileChooserIconView:
       id: filechooser
+      path: '/storage/emulated/0/Download/Music'
 
     BoxLayout:
       size_hint_y: None
